--- a/templates/index.html
+++ b/templates/index.html
@@ -4,22 +4,43 @@
     <meta charset="UTF-8">
     <title>Graph Pretrain</title>
     <style>
+      html, body {
+        height: 100%;
+      }
       body {
         font-family: Arial, sans-serif;
         display: flex;
         flex-direction: column;
         align-items: center;
+        background-image: url('/static/img/brain-ai.jpg');
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        margin: 0; /* Remove default margin */
+      }
+
+      .overlay {
+        background-color: rgba(255, 255, 255, 0.3);
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
       }
 
       h1 {
         text-align: center;
         width: 100%;
+        color: #5c0ee3;
       }
 
       form {
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 30px;
+        border-radius: 10px;
       }
 
       label {
@@ -63,15 +84,17 @@
 
       .file-label {
         font-weight: bold;
+        color:#5c0ee3;
       }
 
       .method-label {
         font-weight: bold;
+        color:#5c0ee3;
       }
 
       .file-hint {
         font-size: 14px;
-        color: #777;
+        color: #fff;
         margin-bottom: 5px;
       }
 
@@ -102,6 +125,7 @@
     </script>
   </head>
   <body>
+    <div class="overlay"></div>
     <h1>Graph Pretrain</h1>
     <form action="/" method="post" enctype="multipart/form-data">
       <label class="file-label" for="predata">Predata File:</label>
